fix layout issue

--- a/gui/src/assets/styles.scss
+++ b/gui/src/assets/styles.scss
@@ -1434,8 +1434,7 @@ fieldset{
 	.empty-header{
 		width: 100%;
 		display: block;
-		margin-top: -30px;
-		height: 80px;
+		height: 50px;
 		background: var(--toolbar-background);
 	}
 }
